# ogdrb

./: .gitignore  .pre-commit-config.yaml  Dockerfile  noxfile.py  pyproject.toml
docs/: CHANGELOG.md  README.md  wordlist.txt
playground/: examples.ipynb
src/ogdrb/: converters.py  i18n.py  main.py  organizer.py  services.py  utils.py
src/ogdrb/locales/: ogdrb.pot
src/ogdrb/locales/pt_BR/LC_MESSAGES/: ogdrb.mo  ogdrb.po
tests/: test_app.py  test_i18n.py  test_main.py  test_ogdrb.py  test_services.py
