[project]
name = "ogdrb"
version = "0.6.0"
description = "OpenGD77 + RepeaterBook"
authors = [
  {name = "Micael Jarniac", email = "micael@jarniac.dev"},
]
license = {text = "MIT"}
readme = "docs/README.md"
classifiers = [
  # Get more from http://pypi.python.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 1 - Planning",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  # https://github.com/astral-sh/uv/issues/8716
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

requires-python = ">=3.14"  # py_ver
dependencies = [
    "anyio>=4.12.1",
    "babel>=2.18.0",
    "attrs>=25.4.0",
    "haversine>=2.9.0",
    "loguru>=0.7.3",
    "nicegui>=3.8.0",
    "opengd77>=0.3.0",
    "pycountry>=26.2.16",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "repeaterbook>=0.4.1",
    "sqlmodel>=0.0.37",
    "us>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
homepage = "https://github.com/MicaelJarniac/ogdrb"
source = "https://github.com/MicaelJarniac/ogdrb"
download = "https://pypi.org/project/ogdrb/#files"
changelog = "https://github.com/MicaelJarniac/ogdrb/blob/main/docs/CHANGELOG.md"
documentation = "https://ogdrb.readthedocs.io"
issues = "https://github.com/MicaelJarniac/ogdrb/issues"

[dependency-groups]
tests = [
    "coverage>=7.13.4",
    "hypothesis>=6.151.9",
    "inline-snapshot>=0.32.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
]
benchmarking = [
    "asv>=0.6.5",
    "virtualenv>=20.39.0",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinxcontrib-spelling>=8.0.2",
]
typing = [
    {include-group = "tests"},
    {include-group = "automation"},
    "mypy>=1.19.1",
    # Typing stubs go here
]
linting = [
    "ruff>=0.15.2",
]
pre-commit = [
    "pre-commit>=4.5.1",
]
automation = [
    "nox[uv]>=2026.2.9",
]
i18n = [
    "babel>=2.18.0",
]
dev = [
    {include-group = "tests"},
    {include-group = "benchmarking"},
    {include-group = "docs"},
    {include-group = "typing"},
    {include-group = "linting"},
    {include-group = "pre-commit"},
    {include-group = "automation"},
    "ipython>=9.10.0",
    "python-semantic-release>=10.5.3",
    "ipykernel>=7.2.0",
]

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
line-length = 88  # Default
force-exclude = true
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",
  "D213",
  "COM812",
  "ISC001",
]
unfixable = ["ERA001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
files = ["src", "docs", "tests", "noxfile.py"]
exclude = [".venv"]
enable_error_code = [
  "ignore-without-code"
]
strict = true
warn_unused_ignores = false  # true
show_column_numbers = true
# show_error_context = true
# pretty = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = """
  pip install uv
  uv lock
  git add uv.lock
  uv build
"""

[tool.semantic_release.changelog.default_templates]
changelog_file = "docs/CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.rc]
match = "rc"
prerelease = true
prerelease_token = "rc"

[tool.coverage.run]
source = ["src"]
command_line = "-m pytest"

[tool.pytest]
# addopts = "--cov"
asyncio_mode = "auto"
main_file = "src/ogdrb/main.py"
addopts = [
  "-p nicegui.testing.user_plugin",
]

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.cruft]
skip = [
  "src",
  "tests",
  "benchmarks",
  ".asv",
  "uv.lock",
]
